Mise a jour du site

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#000000">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -156,27 +156,6 @@
                     </div>
                     <h3>Fil d'actualité</h3>
                     <p>Partagez photos, événements et informations avec toute la communauté scolaire en temps réel.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <i class="fas fa-comment-dots"></i>
-                    </div>
-                    <h3>Messagerie instantanée</h3>
-                    <p>Communiquez en privé ou en groupe avec les parents, professeurs et élèves en toute sécurité.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <i class="fas fa-calendar-alt"></i>
-                    </div>
-                    <h3>Agenda partagé</h3>
-                    <p>Suivez les devoirs, examens, sorties et événements scolaires sur un calendrier unique.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <i class="fas fa-chart-line"></i>
-                    </div>
-                    <h3>Suivi des notes</h3>
-                    <p>Consultez les résultats, les progrès et les évaluations en temps réel.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
@@ -349,8 +328,8 @@
             <div class="modal-icon">
                 <i class="fas fa-rocket"></i>
             </div>
-            <h3>ScoolNet arrive bientôt😛😂 !</h3>
-            <p>L'application est en cours de déploiement sur les stores. Mon amour Sarah 😘❤️ c'est pour te montrer le marige des couleurs noir et blanc😉 Voilà à ressemblent les deux👀 En haut à droite, tu peux changer le mode pour voir. tu peux Laisser ton email👇😉 pour être prévenu dès sa sortie. <br>je t'aime😘</p>
+            <h3>ScoolNet arrive bientôt!</h3>
+            <p>L'application est actuellement en cours de développement et sera prochainement disponible sur les stores. <br>Laissez votre adresse e-mail👇 afin d'être informé(e) dès son lancement. <br>Merci !</p>
             <div class="modal-form">
                 <input type="email" placeholder="Votre email" class="modal-input" id="modalEmail">
                 <button class="btn btn-primary modal-btn" onclick="notifyMe()">
